# exercism-io

./: LICENSE  README.md
cpp/hello-world/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_world.cpp  hello_world.h
cpp/hello-world/.exercism/: metadata.json
cpp/leap/: leap.cpp  leap.h
cpp/reverse-string/: reverse_string.cpp  reverse_string.h
cpp/space-age/: space_age.cpp  space_age.h  space_age_test.cpp
rust/: Cargo.toml  README.md  cargo.toml
rust/02-reverse-string/src/: lib.rs
rust/armstrong-numbers/.exercism/: metadata.json
rust/armstrong-numbers/src/: lib.rs
rust/b01.1-leap/.exercism/: metadata.json
rust/b01.3-nth-prime/src/: lib.rs
rust/b01.5-proverb/src/: lib.rs
rust/b01.6-difference-of-squares/.exercism/: metadata.json
rust/b01.7-sum-of-multiples/src/: lib.rs
rust/b01.9-prime-factors/: Cargo.toml
rust/b01.9-prime-factors/src/: lib.rs
rust/b01.A-armstrong-numbers/src/: lib.rs
rust/beer-song/.exercism/: metadata.json
rust/beer-song/src/: lib.rs
rust/gigasecond/.exercism/: metadata.json
rust/grains/.exercism/: metadata.json
rust/grains/src/: lib.rs
rust/hello-world/.exercism/: metadata.json
rust/nth-prime/.exercism/: metadata.json
rust/prime-factors/.exercism/: metadata.json
rust/proverb/.exercism/: metadata.json
rust/proverb/src/: lib.rs
rust/raindrops/.exercism/: metadata.json
rust/raindrops/src/: lib.rs
rust/reverse-string/.exercism/: metadata.json
rust/reverse-string/src/: lib.rs
rust/reverse-string/tests/: reverse-string.rs
rust/sum-of-multiples/.exercism/: metadata.json
(+3 files in other folders)
