#is this really usefull ?
[workspace]

members = [
    "01-hello-world",
    "02-reverse-string",

    "b01.1-leap",
    "b01.2-raindrops",
    "b01.3-nth-prime",
    "b01.4-beer-song",
    "b01.5-proverb",
    "b01.6-difference-of-squares",
    "b01.7-sum-of-multiples",
    "b01.8-grains",
    "b01.9-prime-factors",
    "b01.A-armstrong-numbers"
]